--- a/navbar.html
+++ b/navbar.html
@@ -263,17 +263,17 @@ div.desc {
 <h2>Vyberte pohlavi</h2>
 <p>Jakeho pohlavi jste</p>
 <form>
-  <input type="radio" id="muz" name="pohlavi" value="Muz">
-  <label for="muz">Muz</label><br>
-  <input type="radio" id="zena" name="pohlavi" value="Zena">
-  <label for="zena">Zena</label><br>
-  <input type="radio" id="jine" name="pohlavi" value="Jine">
-  <label for="jine">Jine</label>
+Â  <input type="radio" id="muz" name="pohlavi" value="Muz">
+Â  <label for="muz">Muz</label><br>
+Â  <input type="radio" id="zena" name="pohlavi" value="Zena">
+Â  <label for="zena">Zena</label><br>
+Â  <input type="radio" id="jine" name="pohlavi" value="Jine">
+Â  <label for="jine">Jine</label>
 </form> 
 </fieldset><br><br><br>
 </fieldset><br>
 
-<input type="submit" value="Odeslat formular">
+<input type="submit" value="Odeslat tento formular">
 
   </body>
 </html>
